# social-network

./: .env.dist  .gitignore  LICENSE  README.md  pyproject.toml
config/: settings.py  urls.py
core/: models.py  urls.py  views.py
core/static/core/css/: main.css
core/templates/: base.html  footer.html  header.html
core/templates/core/: index.html
posts/: models.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_content.py  0003_alter_post_options_post_is_active.py
posts/templates/posts/: post_confirm_delete.html  post_create.html  post_detail.html  post_update.html
profiles/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
profiles/migrations/: 0001_initial.py  0002_alter_profile_gender.py  0003_alter_profile_avatar.py  0004_alter_profile_avatar.py  0005_profile_is_active.py
profiles/templates/profiles/: profile.html  profile_detail.html  profile_update.html
socialnetwork/: settings.py  urls.py
users/: admin.py  backends.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_email.py  0003_alter_customuser_email.py
users/templates/: base.html  footer.html  header.html
users/templates/users/: form_view.html  login.html  register.html
